--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "parentspanid",
         "payshield",
         "pino",
+        "rushstack",
         "spanid",
         "traceid",
         "typebox",
