--- a/core/blong/tsconfig.json
+++ b/core/blong/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "rootDir": ".",
         "allowJs": true,
         "checkJs": false,
         "moduleResolution": "NodeNext",
