--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,11 @@
 {
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "endOfLine": "lf",
-  "printWidth": 100,
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4
+    "arrowParens": "avoid",
+    "bracketSameLine": false,
+    "bracketSpacing": false,
+    "endOfLine": "lf",
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "singleAttributePerLine": true
 }
