--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "cSpell.words": [
+        "adaptername",
         "apidevtools",
         "bitsyntax",
         "blong",
@@ -46,6 +47,7 @@
         "parentspanid",
         "payshield",
         "pino",
+        "realmname",
         "rushstack",
         "spanid",
         "traceid",
