--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -1,26 +1,28 @@
 {
+    "bin": "./bin/blong.ts",
     "dependencies": {
         "@apidevtools/swagger-parser": "^10.1.0",
         "@fastify/basic-auth": "^5.1.1",
-        "@fastify/bearer-auth": "^9.1.0",
-        "@fastify/cookie": "^9.2.0",
-        "@fastify/cors": "^8.4.2",
-        "@fastify/swagger": "^8.12.1",
-        "@fastify/swagger-ui": "^2.0.1",
-        "@sinclair/typebox": "^0.31.28",
-        "@sinclair/typebox-codegen": "^0.8.13",
+        "@fastify/bearer-auth": "^9.3.0",
+        "@fastify/cookie": "^9.3.0",
+        "@fastify/cors": "^8.5.0",
+        "@fastify/swagger": "^8.13.0",
+        "@fastify/swagger-ui": "^2.1.0",
+        "@sinclair/typebox": "^0.32.9",
+        "@sinclair/typebox-codegen": "^0.9.7",
         "browser-process-hrtime": "^1.0.0",
         "chokidar": "^3.5.3",
-        "fastify": "^4.25.1",
+        "fastify": "^4.25.2",
         "fastify-plugin": "^4.5.1",
         "got": "^14.0.0",
-        "jose": "^5.1.3",
-        "ky": "^1.1.3",
+        "jose": "^5.2.0",
+        "ky": "^1.2.0",
         "lru-cache": "^10.1.0",
+        "minimist": "^1.2.8",
         "openapi-types": "^12.1.3",
         "p-queue": "^8.0.1",
-        "pino": "^8.17.1",
-        "pino-pretty": "^10.3.0",
+        "pino": "^8.17.2",
+        "pino-pretty": "^10.3.1",
         "reconnect-core": "^1.3.0",
         "ut-bitsyntax": "^6.2.6",
         "ut-bus": "^7.64.7",
