--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -19,6 +19,7 @@
         "ky": "^1.2.0",
         "lru-cache": "^10.1.0",
         "minimist": "^1.2.8",
+        "node-rdkafka": "^2.17.0",
         "openapi-types": "^12.1.3",
         "p-queue": "^8.0.1",
         "pino": "^8.17.2",
@@ -36,11 +37,11 @@
     },
     "devDependencies": {
         "@rushstack/eslint-config": "^3.5.1",
-        "eslint": "~8.56.0",
-        "typescript": "^5.3.3",
         "@rushstack/heft": "~0.63.6",
+        "@rushstack/heft-lint-plugin": "~0.2.16",
         "@rushstack/heft-typescript-plugin": "~0.2.16",
-        "@rushstack/heft-lint-plugin": "~0.2.16"
+        "eslint": "~8.56.0",
+        "typescript": "^5.3.3"
     },
     "exports": {
         ".": "./types.ts"
