--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -16,16 +16,18 @@
         "fastify-plugin": "^4.5.1",
         "got": "^14.0.0",
         "jose": "^5.2.0",
+        "knex": "^3.1.0",
         "ky": "^1.2.0",
         "lru-cache": "^10.1.0",
         "minimist": "^1.2.8",
+        "mysql2": "^3.11.0",
         "node-rdkafka": "^2.17.0",
         "openapi-types": "^12.1.3",
         "p-queue": "^8.0.1",
         "pino": "^8.17.2",
         "pino-pretty": "^10.3.1",
         "reconnect-core": "^1.3.0",
-        "ut-bitsyntax": "^6.2.6",
+        "ut-bitsyntax": "^6.2.7",
         "ut-bus": "^7.64.7",
         "ut-config": "^7.10.0",
         "ut-dns-discovery": "^6.2.3",
