--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,5 @@ jobs:
       #     user_email: 41898282+github-actions[bot]@users.noreply.github.com
       - name: test
         run: ./core/test/node_modules/.bin/tap core/**/*.test.ts --allow-incomplete-coverage
+        env:
+          BROWSERSLIST_IGNORE_OLD_DATA: 1
