--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -9,13 +9,14 @@
         "@fastify/swagger": "^8.15.0",
         "@fastify/swagger-ui": "^4.1.0",
         "@feasibleone/blong": "workspace:^1.0.0",
+        "@feasibleone/blong-kopi": "workspace:^1.0.0",
         "@sinclair/typebox": "^0.33.7",
         "@sinclair/typebox-codegen": "^0.10.4",
         "browser-process-hrtime": "^1.0.0",
         "chokidar": "^3.6.0",
         "fastify": "^4.28.1",
         "fastify-plugin": "^4.5.1",
-        "globby": "^14.0.2",
+        "glob": "^11.0.0",
         "got": "^14.4.2",
         "jose": "^5.7.0",
         "knex": "^3.1.0",
