--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -9,6 +9,7 @@
         "@rushstack/heft": "~0.67.0",
         "@rushstack/heft-lint-plugin": "~0.4.1",
         "@rushstack/heft-typescript-plugin": "~0.5.25",
+        "openapi-types": "^12.1.3",
         "eslint": "~8.57.0",
         "typescript": "^5.5.4"
     },
