--- a/core/blong-login/package.json
+++ b/core/blong-login/package.json
@@ -10,5 +10,13 @@
         "@sinclair/typebox": "^0.33.7",
         "ut-function.cbc": "^1.1.6",
         "jose": "^5.7.0"
+    },
+    "devDependencies": {
+        "@rushstack/eslint-config": "^4.0.1",
+        "@rushstack/heft": "~0.67.0",
+        "@rushstack/heft-lint-plugin": "~0.4.1",
+        "@rushstack/heft-typescript-plugin": "~0.5.25",
+        "eslint": "~8.57.0",
+        "typescript": "^5.5.4"
     }
 }
