--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,10 +47,13 @@
         "Hejlsberg",
         "kalinkrustev",
         "keyblock",
+        "kopi",
         "mdns",
         "mlek",
         "mlsk",
         "npmjs",
+        "OpenAPIV2",
+        "OpenAPIV3_1",
         "parentspanid",
         "payshield",
         "pino",
