fix: improve api schema handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "datetime",
         "Diebold",
         "dukpt",
+        "endregion",
         "ESOCKETTIMEDOUT",
         "fastify",
         "feasibleone",
