--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -12,6 +12,7 @@
         "@feasibleone/blong-kopi": "workspace:^1.0.0",
         "@sinclair/typebox": "^0.33.7",
         "@sinclair/typebox-codegen": "^0.10.4",
+        "ajv-formats": "^2.1.1",
         "browser-process-hrtime": "^1.0.0",
         "chokidar": "^3.6.0",
         "fastify": "^4.28.1",
@@ -38,6 +39,7 @@
         "ut-function.merge": "^1.5.6",
         "ut-function.timing": "^1.2.0",
         "ut-port": "^6.45.2",
+        "ulidx": "^2.4.1",
         "uuid": "^10.0.0",
         "yaml": "^2.5.1"
     },
