--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -24,6 +24,8 @@
         "ky": "^1.7.1",
         "lru-cache": "^11.0.0",
         "minimist": "^1.2.8",
+        "mongo-uri-builder": "^4.0.0",
+        "mongodb": "^7.0.0",
         "mysql2": "^3.11.0",
         "node-rdkafka": "^3.1.0",
         "openapi-types": "^12.1.3",
