feat: implement k8s, keycloak, s3 and vault adapters

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,7 @@
         "spanid",
         "traceid",
         "typebox",
+        "ulidx",
         "unannounce",
         "unixtime",
         "unstate"
