--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -2,6 +2,7 @@
     "bin": "./bin/blong.ts",
     "dependencies": {
         "@apidevtools/swagger-parser": "^10.1.0",
+        "@aws-sdk/client-s3": "^3.962.0",
         "@fastify/basic-auth": "^5.1.1",
         "@fastify/bearer-auth": "^9.4.0",
         "@fastify/cookie": "^9.4.0",
@@ -10,6 +11,8 @@
         "@fastify/swagger-ui": "^4.1.0",
         "@feasibleone/blong": "workspace:^1.0.0",
         "@feasibleone/blong-kopi": "workspace:^1.0.0",
+        "@keycloak/keycloak-admin-client": "^26.4.7",
+        "@kubernetes/client-node": "^1.4.0",
         "@sinclair/typebox": "^0.33.7",
         "@sinclair/typebox-codegen": "^0.10.4",
         "ajv-formats": "^2.1.1",
@@ -28,6 +31,7 @@
         "mongodb": "^7.0.0",
         "mysql2": "^3.11.0",
         "node-rdkafka": "^3.1.0",
+        "node-vault": "^0.10.9",
         "openapi-types": "^12.1.3",
         "p-queue": "^8.0.1",
         "pino": "^9.3.2",
