feat: implement k8s watch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,13 @@
         "Bislama",
         "bitsyntax",
         "blong",
+        "clusterrole",
+        "clusterrolebinding",
+        "clusterrolebindings",
+        "clusterroles",
         "codegen",
+        "configmap",
+        "daemonset",
         "dapr",
         "datetime",
         "Diebold",
@@ -49,20 +55,32 @@
         "kalinkrustev",
         "keyblock",
         "kopi",
+        "kubeconfig",
         "mdns",
         "mlek",
         "mlsk",
+        "networkpolicies",
         "npmjs",
         "OpenAPIV2",
         "OpenAPIV3_1",
         "parentspanid",
         "payshield",
+        "persistentvolume",
+        "persistentvolumeclaim",
+        "persistentvolumeclaims",
+        "persistentvolumes",
         "pino",
         "pnpmfile",
         "rdkafka",
         "realmname",
+        "replicaset",
+        "replicasets",
+        "rolebinding",
+        "rolebindings",
         "rushstack",
         "spanid",
+        "statefulset",
+        "statefulsets",
         "traceid",
         "typebox",
         "ulidx",
