--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -15,6 +15,7 @@
         "@kubernetes/client-node": "^1.4.0",
         "@sinclair/typebox": "^0.33.7",
         "@sinclair/typebox-codegen": "^0.10.4",
+        "@slack/webhook": "^7.0.6",
         "ajv-formats": "^2.1.1",
         "browser-process-hrtime": "^1.0.0",
         "chokidar": "^3.6.0",
