fix: prepare for publishing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "fastify",
         "feasibleone",
         "Hejlsberg",
+        "infitx",
         "kalinkrustev",
         "keyblock",
         "kopi",
