--- a/core/blong-login/tsconfig.json
+++ b/core/blong-login/tsconfig.json
@@ -10,6 +10,8 @@
         "jsx": "react",
         "outDir": "dist",
         "target": "ES2022",
+        "declaration": true,
+        "declarationMap": true,
         "resolveJsonModule": true
     },
     "ts-node": {
