--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   release-docker:
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
     uses: infitx-org/actions/.github/workflows/release-docker.yaml@main
     secrets:
       token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
