feat: update dependencies across multiple packages

--- a/core/blong-kopi/package.json
+++ b/core/blong-kopi/package.json
@@ -6,15 +6,15 @@
     },
     "devDependencies": {
         "@rushstack/eslint-config": "^4.0.1",
-        "@rushstack/heft": "~0.67.0",
-        "@rushstack/heft-lint-plugin": "~0.4.1",
-        "@rushstack/heft-typescript-plugin": "~0.5.25",
+        "@rushstack/heft": "^1.1.7",
+        "@rushstack/heft-lint-plugin": "^1.1.10",
+        "@rushstack/heft-typescript-plugin": "^1.1.7",
         "@swc/core": "^1.7.14",
         "@types/node": "^24",
-        "eslint": "~8.57.0",
+        "eslint": "~9.39.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "tap": "^18.8.0",
+        "tap": "^21.5.0",
         "typescript": "^5.5.4"
     },
     "name": "@feasibleone/blong-kopi",
