--- a/core/blong-gogo/package.json
+++ b/core/blong-gogo/package.json
@@ -1,7 +1,7 @@
 {
     "bin": "./bin/blong.ts",
     "dependencies": {
-        "@apidevtools/swagger-parser": "^10.1.0",
+        "@apidevtools/swagger-parser": "^12.1.0",
         "@aws-sdk/client-s3": "^3.971.0",
         "@fastify/basic-auth": "^6.2.0",
         "@fastify/bearer-auth": "^10.1.2",
@@ -16,9 +16,9 @@
         "@sinclair/typebox": "^0.33.7",
         "@sinclair/typebox-codegen": "^0.10.4",
         "@slack/webhook": "^7.0.6",
-        "ajv-formats": "^2.1.1",
+        "ajv-formats": "^3.0.1",
         "browser-process-hrtime": "^1.0.0",
-        "chokidar": "^3.6.0",
+        "chokidar": "^5.0.0",
         "fastify": "^5.7.1",
         "fastify-plugin": "^5.1.0",
         "glob": "^13.0.0",
@@ -34,7 +34,7 @@
         "node-rdkafka": "^3.6.1",
         "node-vault": "^0.10.9",
         "openapi-types": "^12.1.3",
-        "p-queue": "^8.0.1",
+        "p-queue": "^9.1.0",
         "pino": "^10.2.1",
         "pino-pretty": "^13.1.3",
         "reconnect-core": "^1.3.0",
@@ -52,10 +52,10 @@
     },
     "devDependencies": {
         "@rushstack/eslint-config": "^4.0.1",
-        "@rushstack/heft": "~0.67.0",
-        "@rushstack/heft-lint-plugin": "~0.4.1",
-        "@rushstack/heft-typescript-plugin": "~0.5.25",
-        "eslint": "~8.57.0",
+        "@rushstack/heft": "^1.1.7",
+        "@rushstack/heft-lint-plugin": "^1.1.10",
+        "@rushstack/heft-typescript-plugin": "^1.1.7",
+        "eslint": "~9.39.2",
         "typescript": "^5.5.4"
     },
     "exports": {
