--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,7 @@ jobs:
       contents: read
       packages: write
       security-events: write
+      id-token: write
     uses: infitx-org/actions/.github/workflows/release-docker.yaml@main
     secrets:
       token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
