--- a/core/blong-login/package.json
+++ b/core/blong-login/package.json
@@ -2,7 +2,7 @@
     "name": "@feasibleone/blong-login",
     "scripts": {
         "build": "heft build --clean",
-        "ci-publish": "npm publish --access public"
+        "ci-publish": "npm publish --access public --provenance"
     },
     "export": {
         "/server.js": "./dist/server.js",
