fix: add ci-publish script to package.json and include blong-test in release-please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,7 @@
     "packages": {
         "core/blong": {},
         "core/blong-login": {},
+        "core/blong-test": {},
         "docs/blong": {}
     }
 }
