chore: release main

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,1 @@
-{"core/blong":"1.0.0","core/blong-login":"1.0.0","docs/blong":"1.0.0"}
+{"core/blong":"1.0.1","core/blong-login":"1.0.1","docs/blong":"1.0.0","core/blong-test":"1.0.0"}
