--- a/core/blong-login/package.json
+++ b/core/blong-login/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@feasibleone/blong-login",
     "description": "Login and authentication utilities for the Blong framework",
+    "repository": {
+        "url": "https://github.com/feasibleone/blong"
+    },
     "scripts": {
         "build": "heft build --clean",
         "ci-publish": "npm publish --access public --provenance"
