--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -1,6 +1,9 @@
 {
     "name": "@feasibleone/blong",
     "description": "API and DRY focused RAD framework https://feasibleone.github.io/blong-docs",
+    "repository": {
+        "url": "https://github.com/feasibleone/blong"
+    },
     "dependencies": {
         "@sinclair/typebox": "^0.33.7",
         "pino": "^10.2.1",
