fix: update repository URLs in package.json files for consistency

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   release-docker:
     permissions:
-      contents: read
+      contents: write
       packages: write
       security-events: write
       id-token: write
