--- a/core/blong-login/package.json
+++ b/core/blong-login/package.json
@@ -2,7 +2,7 @@
     "name": "@feasibleone/blong-login",
     "description": "Login and authentication utilities for the Blong framework",
     "repository": {
-        "url": "https://github.com/feasibleone/blong"
+        "url": "git+https://github.com/feasibleone/blong.git"
     },
     "scripts": {
         "build": "heft build --clean",
