--- a/docs/blong/package.json
+++ b/docs/blong/package.json
@@ -1,5 +1,11 @@
 {
     "name": "@feasibleone/blong-docs",
+    "description": "API and DRY focused RAD framework https://feasibleone.github.io/blong-docs",
+    "keywords": [
+        "blong",
+        "rad",
+        "framework"
+    ],
     "browserslist": {
         "development": [
             "last 3 chrome version",
@@ -42,8 +48,7 @@
         "start": "docusaurus start --no-open",
         "swizzle": "docusaurus swizzle",
         "write-heading-ids": "docusaurus write-heading-ids",
-        "write-translations": "docusaurus write-translations",
-        "ci-publish": "echo \"pages=build\" >> $GITHUB_OUTPUT"
+        "write-translations": "docusaurus write-translations"
     },
     "version": "1.0.2"
 }
