--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -1,6 +1,11 @@
 {
     "name": "@feasibleone/blong",
     "description": "API and DRY focused RAD framework https://feasibleone.github.io/blong-docs",
+    "keywords": [
+        "blong",
+        "rad",
+        "framework"
+    ],
     "repository": {
         "url": "git+https://github.com/feasibleone/blong.git"
     },
