fix: add package.json export to login and test modules

--- a/core/blong-login/package.json
+++ b/core/blong-login/package.json
@@ -15,7 +15,8 @@
     },
     "exports": {
         "./server.js": "./dist/server.js",
-        "./browser.js": "./dist/browser.js"
+        "./browser.js": "./dist/browser.js",
+        "./package.json": "./package.json"
     },
     "type": "module",
     "version": "1.0.6",
