fix: add include field for package.json and TypeScript files in tsconfig.json

--- a/core/blong-login/tsconfig.json
+++ b/core/blong-login/tsconfig.json
@@ -21,5 +21,6 @@
         "files": true,
         "experimentalResolver": true
     },
+    "include": ["./package.json", "**/*.ts"],
     "exclude": ["node_modules", ".lint", ".docusaurus", "dist"]
 }
