--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "**/.rush/temp/": true,
         "**/node_modules": true,
         "**/bower_components": true,
-        "**/*.code-search": true
+        "**/*.code-search": true,
+        "out": true,
+        "dist": true
     },
     "workbench.sideBar.location": "right",
     "editor.codeActionsOnSave": {
@@ -28,6 +30,7 @@
     "[jsonc]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "typescript.tsc.autoDetect": "off",
     "cSpell.words": [
         "adaptername",
         "Ambrym",
@@ -76,6 +79,7 @@
         "realmname",
         "replicaset",
         "replicasets",
+        "restfs",
         "rolebinding",
         "rolebindings",
         "rushstack",
