--- a/ext/rest-fs/package.json
+++ b/ext/rest-fs/package.json
@@ -77,7 +77,7 @@
         "lint": "eslint src",
         "test": "vscode-test",
         "build": "npm run compile",
-        "ci-unit": "npm run test",
+        "ci-unit": "xvfb-run -a npm run test",
         "ci-lint": "npm run lint"
     },
     "devDependencies": {
