chore: release main

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -1,1 +1,1 @@
-{"core/blong":"1.0.7","core/blong-login":"1.0.7","docs/blong":"1.0.4","core/blong-test":"1.0.6"}
+{"core/blong":"1.1.0","core/blong-login":"1.1.0","docs/blong":"1.1.0","core/blong-test":"1.1.0","ext/rest-fs":"1.0.0"}
