--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -11,23 +11,37 @@
     },
     "dependencies": {
         "@sinclair/typebox": "^0.33.7",
+        "openapi-types": "^12.1.3",
         "pino": "^10.2.1",
         "ut-function.merge": "^1.5.6"
     },
     "devDependencies": {
+        "@aws-sdk/client-s3": "^3.980.0",
+        "@keycloak/keycloak-admin-client": "^26.5.1",
+        "@kubernetes/client-node": "^1.4.0",
+        "@microsoft/api-extractor": "^7.56.0",
         "@rushstack/eslint-config": "^4.0.1",
-        "@rushstack/heft": "^1.1.7",
         "@rushstack/heft-lint-plugin": "^1.1.10",
         "@rushstack/heft-typescript-plugin": "^1.1.7",
-        "openapi-types": "^12.1.3",
+        "@rushstack/heft": "^1.1.7",
+        "@slack/webhook": "^7.0.6",
+        "@slack/types": "^2.19.0",
         "eslint": "~9.39.2",
+        "knex": "^3.1.0",
+        "mongodb": "^7.0.0",
+        "node-vault": "^0.10.9",
+        "openapi-types": "^12.1.3",
+        "@types/request": "^2.48.13",
+        "request": "^2.88.2",
+        "tarn": "^3.0.2",
         "typescript": "^5.9.3"
     },
     "exports": {
         ".": "./dist/types.js"
     },
+    "typings": "./dist/blong.d.ts",
     "scripts": {
-        "build": "heft build --clean",
+        "build": "heft build --clean;api-extractor run --local --verbose",
         "ci-publish": "npm publish --access public --provenance"
     },
     "type": "module",
