--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -26,6 +26,7 @@
         "@rushstack/heft": "^1.1.11",
         "@slack/webhook": "^7.0.6",
         "@slack/types": "^2.19.0",
+        "bson": "^7.0.0",
         "eslint": "~9.39.2",
         "knex": "^3.1.0",
         "mongodb": "^7.0.0",
