--- a/core/blong/package.json
+++ b/core/blong/package.json
@@ -19,29 +19,28 @@
         "@aws-sdk/client-s3": "^3.980.0",
         "@keycloak/keycloak-admin-client": "^26.5.1",
         "@kubernetes/client-node": "^1.4.0",
-        "@microsoft/api-extractor": "^7.56.0",
         "@rushstack/eslint-config": "^4.0.1",
         "@rushstack/heft-lint-plugin": "^1.1.14",
         "@rushstack/heft-typescript-plugin": "^1.1.11",
         "@rushstack/heft": "^1.1.11",
-        "@slack/webhook": "^7.0.6",
         "@slack/types": "^2.19.0",
+        "@slack/webhook": "^7.0.6",
+        "@types/request": "^2.48.13",
         "bson": "^7.0.0",
+        "dts-bundle-generator": "^9.5.1",
         "eslint": "~9.39.2",
         "knex": "^3.1.0",
         "mongodb": "^7.0.0",
         "node-vault": "^0.10.9",
         "openapi-types": "^12.1.3",
-        "@types/request": "^2.48.13",
         "tarn": "^3.0.2",
         "typescript": "^5.9.3"
     },
     "exports": {
-        ".": "./dist/blong.js"
+        ".": "./dist/types.js"
     },
-    "typings": "./dist/blong.d.ts",
     "scripts": {
-        "build": "heft build --clean;api-extractor run --local --verbose;cp dist/types.js dist/blong.js",
+        "build": "heft build --clean;dts-bundle-generator --config dts-gen.config.json",
         "ci-publish": "npm publish --access public --provenance"
     },
     "type": "module",
